--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.13",
+    "@tensorflow/tfjs": "^3.11.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
+    "async-storage": "^0.1.0",
     "expo": "~43.0.2",
+    "expo-camera": "^12.0.3",
+    "expo-gl": "^11.0.3",
+    "expo-gl-cpp": "^11.0.1",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-updates": "~0.10.13",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-unimodules": "^0.14.10",
+    "react-native-web": "0.17.1",
+    "seedrandom": "^2.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
