find and repalced

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,7 +134,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.capstone"
+        applicationId "com.IDvasive"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
