--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ platform :ios, '12.0'
 require 'json'
 podfile_properties = JSON.parse(File.read('./Podfile.properties.json')) rescue {}
 
-target 'IDvasive' do
+target 'Idvasive' do
   use_expo_modules!
   config = use_native_modules!
 
